# muga

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: ci-go.yml  ci-integration.yml  ci-python.yml  contracts.yml  publish-python.yml  release.yml  validate-generated.yml
api/models/: generated.go  go.mod  go.sum
cli/: .goreleaser.yaml  Makefile  go.mod  go.sum
cli/cmd/muga/: main.go
cli/hack/: integration.sh
cli/integration/: auth_test.go  coverage_test.go  main_test.go  project_test.go  smoke_test.go
cli/internal/api/: auth.go  client.go  client_test.go  project.go  project_test.go
cli/internal/auth/: credential.go  credential_test.go
cli/internal/browser/: browser.go  browser_test.go
cli/internal/cmd/: alerts.go  alerts_verbs.go  auth.go  auth_login.go  auth_login_test.go  auth_logout.go  auth_logout_test.go  auth_status.go  auth_status_test.go  banner.go  banner_test.go  config_cmd.go  config_verbs.go  cron.go  cron_verbs.go  errors_cmd.go  errors_verbs.go  golden_screens_test.go  golden_test.go  logs.go  logs_verbs.go  monitor.go  monitor_verbs.go  plan.go  plan_verbs.go  project.go  project_create.go  project_create_test.go  project_ls.go  project_ls_test.go  project_rm.go  project_switch.go  project_switch_test.go  require_auth.go  require_auth_test.go  root.go  root_test.go  stubs.go  version.go  version_test.go
cli/internal/cmd/testdata/: alerts_add.golden  alerts_history.golden  alerts_history_empty.golden  alerts_ls.golden  alerts_ls_empty.golden  alerts_rm.golden  auth_login.golden  cron_ls.golden  (+44 more)
cli/internal/config/: config.go  config_test.go  context.go  context_test.go
cli/internal/output/: helpers.go  helpers_test.go  output.go  output_test.go
cli/internal/style/: layout.go  layout_test.go  style.go  style_test.go
docs/contracts/: openapi.yaml
docs/upstream/: README.md  agent-instructions.md  conventions.md
sdks/python/: Makefile  README.md  pyproject.toml
sdks/python/src/muga/: __init__.py
sdks/python/tests/: test_version.py
