[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "muga"
version = "0.0.1"
description = "Observability for developers who live in the terminal."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "mugahq"},
]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/mugahq/muga"
Repository = "https://github.com/mugahq/muga"

[tool.setuptools.packages.find]
where = ["src"]
